--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="FitTrack Pro - Acompanhamento de Peso e Progresso">
     <title>FitTrack Pro - Acompanhamento de Peso</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-    <link rel="manifest" href="manifest.json">
+    <link rel="manifest" href="./manifest.json">
     <style>
         * {
             margin: 0;
