--- a/index.html
+++ b/index.html
@@ -182,16 +182,13 @@
         .main-content {
             margin-left: 0;
             margin-bottom: 70px;
-            padding: 15px;
+            padding: 20px;
             min-height: calc(100vh - 70px);
             transition: margin-left 0.3s ease;
             max-width: 100%;
             overflow-x: hidden;
             box-sizing: border-box;
             width: 100%;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
         }
 
         /* HEADER */
@@ -199,12 +196,12 @@
             display: flex;
             flex-direction: column;
             gap: 15px;
-            margin-bottom: 20px;
+            margin-bottom: 30px;
             text-align: center;
         }
 
         .header-left h1 {
-            font-size: 1.5rem;
+            font-size: 2rem;
             font-weight: 700;
             margin-bottom: 5px;
         }
@@ -277,14 +274,14 @@
         .dashboard-grid {
             display: grid;
             grid-template-columns: repeat(2, 1fr);
-            gap: 15px;
-            margin-bottom: 20px;
+            gap: 20px;
+            margin-bottom: 30px;
         }
 
         .stat-card {
             background: var(--bg-card);
-            border-radius: 16px;
-            padding: 15px;
+            border-radius: 20px;
+            padding: 25px;
             border: 1px solid var(--border-color);
             position: relative;
             overflow: hidden;
@@ -336,7 +333,7 @@
         .stat-card.info .stat-icon { color: #74b9ff; }
 
         .stat-value {
-            font-size: 1.5rem;
+            font-size: 2rem;
             font-weight: 700;
             margin-bottom: 5px;
         }
@@ -523,12 +520,11 @@
 
         .card {
             background: var(--bg-card);
-            border-radius: 16px;
-            padding: 20px;
+            border-radius: 20px;
+            padding: 25px;
             border: 1px solid var(--border-color);
             transition: background 0.3s ease;
             max-width: 100%;
-            width: 100%;
             box-sizing: border-box;
         }
 
@@ -730,29 +726,45 @@
         }
 
         .form-section.active {
+            display: block;
+            opacity: 1;
+            transform: translateY(0);
+        }
+
+        /* Centralizar apenas formulário de registro */
+        #section-registro {
             display: flex;
             flex-direction: column;
             align-items: center;
-            opacity: 1;
-            transform: translateY(0);
-            width: 100%;
-            max-width: 100%;
-        }
-
-        #section-registro {
-            justify-content: flex-start;
-        }
-
-        #section-registro .card {
-            max-width: 600px;
-            width: 100%;
-            margin: 0 auto;
         }
 
         #section-registro .header {
             width: 100%;
             max-width: 600px;
-            margin: 0 auto 20px;
+            text-align: center;
+        }
+
+        #section-registro > .card {
+            max-width: 600px;
+            width: 100%;
+            margin: 0 auto;
+            box-sizing: border-box;
+            overflow: hidden;
+        }
+
+        #section-registro .form-grid {
+            width: 100%;
+            max-width: 100%;
+        }
+
+        #section-registro .form-group {
+            width: 100%;
+            max-width: 100%;
+        }
+
+        #section-registro .form-input {
+            width: 100%;
+            max-width: 100%;
         }
 
         .form-grid {
@@ -760,16 +772,22 @@
             grid-template-columns: 1fr;
             gap: 15px;
             margin-bottom: 20px;
+            width: 100%;
+            max-width: 100%;
+            box-sizing: border-box;
         }
 
         .form-group {
             display: flex;
             flex-direction: column;
             gap: 8px;
+            width: 100%;
+            max-width: 100%;
+            box-sizing: border-box;
         }
 
         .form-group.full {
-            grid-column: span 2;
+            grid-column: span 1;
         }
 
         .form-label {
@@ -786,6 +804,9 @@
             color: var(--text-primary);
             font-size: 1.1rem;
             transition: all 0.3s;
+            width: 100%;
+            max-width: 100%;
+            box-sizing: border-box;
         }
 
         .form-input:focus {
@@ -1127,6 +1148,7 @@
             animation: modalIn 0.3s ease;
             max-height: 90vh;
             overflow-y: auto;
+            overflow-x: hidden;
             box-sizing: border-box;
         }
 
@@ -1235,6 +1257,7 @@
         /* NOTAS */
         .notes-textarea {
             width: 100%;
+            max-width: 100%;
             min-height: 100px;
             background: var(--bg-secondary);
             border: 2px solid var(--border-color);
@@ -1244,6 +1267,7 @@
             font-size: 1rem;
             resize: vertical;
             font-family: inherit;
+            box-sizing: border-box;
         }
 
         .notes-textarea:focus {
@@ -1633,6 +1657,7 @@
             width: 95%;
             max-height: 90vh;
             overflow-y: auto;
+            overflow-x: hidden;
             box-sizing: border-box;
         }
 
@@ -1640,6 +1665,23 @@
             display: flex;
             flex-direction: column;
             gap: 20px;
+            width: 100%;
+            max-width: 100%;
+            box-sizing: border-box;
+            overflow: hidden;
+        }
+
+        .workout-editor-form .form-group {
+            width: 100%;
+            max-width: 100%;
+            box-sizing: border-box;
+        }
+
+        .workout-editor-form .form-input,
+        .workout-editor-form .notes-textarea {
+            width: 100%;
+            max-width: 100%;
+            box-sizing: border-box;
         }
 
         .workout-editor-days {
@@ -1679,6 +1721,8 @@
             border-radius: 12px;
             padding: 20px;
             position: relative;
+            max-width: 100%;
+            box-sizing: border-box;
         }
 
         .workout-exercise-editor-header {
@@ -1708,12 +1752,47 @@
 
         .workout-exercise-editor-grid {
             display: grid;
-            grid-template-columns: repeat(2, 1fr);
+            grid-template-columns: 1fr;
             gap: 15px;
+            width: 100%;
+            max-width: 100%;
+            box-sizing: border-box;
+            min-width: 0;
+        }
+
+        /* Centralizar formulários de exercícios no editor */
+        .workout-exercise-editor-item {
+            width: 100%;
+            max-width: 100%;
+            box-sizing: border-box;
+            overflow: hidden;
+            min-width: 0;
+        }
+
+        .workout-exercise-editor-item .form-group {
+            width: 100%;
+            max-width: 100%;
+            box-sizing: border-box;
+            min-width: 0;
+        }
+
+        .workout-exercise-editor-item .form-input,
+        .workout-exercise-editor-item .notes-textarea {
+            width: 100%;
+            max-width: 100%;
+            box-sizing: border-box;
+            min-width: 0;
+        }
+
+        .workout-exercise-editor-grid .form-group {
+            width: 100%;
+            max-width: 100%;
+            box-sizing: border-box;
+            min-width: 0;
         }
 
         .workout-exercise-editor-image {
-            grid-column: span 2;
+            grid-column: span 1;
             aspect-ratio: 16/9;
             background: var(--bg-card);
             border: 2px dashed var(--border-color);
@@ -1725,6 +1804,9 @@
             transition: all 0.3s;
             position: relative;
             overflow: hidden;
+            width: 100%;
+            max-width: 100%;
+            box-sizing: border-box;
         }
 
         .workout-exercise-editor-image:hover {
@@ -1905,8 +1987,13 @@
                 display: block;
             }
 
-            #section-registro .card {
+            #section-registro > .card {
                 max-width: 800px;
+                margin: 0 auto;
+            }
+
+            .workout-exercise-editor-grid {
+                grid-template-columns: repeat(2, 1fr);
             }
 
             .header {
