--- a/index.html
+++ b/index.html
@@ -2302,7 +2302,7 @@
                                 </svg>
                             </button>
                         </div>
-                        <input type="file" id="foto-frente-modal" accept="image/*" capture="environment" style="display: none;">
+                        <input type="file" id="foto-frente-modal" accept="image/*" style="display: none;">
                     </div>
                     <div class="photo-upload-item">
                         <label style="display: block; margin-bottom: 8px; font-size: 13px; font-weight: 600; color: var(--text-secondary);">Foto Lado</label>
@@ -2321,7 +2321,7 @@
                                 </svg>
                             </button>
                         </div>
-                        <input type="file" id="foto-lado-modal" accept="image/*" capture="environment" style="display: none;">
+                        <input type="file" id="foto-lado-modal" accept="image/*" style="display: none;">
                     </div>
                 </div>
 
